The Grinder 3.5 (Not yet released)
----------------------------------

   Fix bug 2988755 - NPE in JythonScriptExecutionException
   .tracebackToMessage(). Thanks to Brian Runck for the report.

   Fix bug 2952023 - Cookie.parse should recognise "httponly"(lower
   case). Thanks to amachang for the report and the patch.


The Grinder 3.4
---------------

   Fix bug 2913297 - Memory leak in SSLControlImplementation. Thanks to
   Guido Serra for the report.

   Fix bug 1619450 - HTTPClient.TestCookie.testParse unit test fails.
   Thanks to amachang for re-opening this bug and providing a patch.

   Fix bug 2911790 - HTTP filter generates invalid code for Jython 2.5+.
   Thanks to the anonymous reporter.

   Fix bug 2921612 - DCR instrumentation did not work with
   HTTPRequest. Thanks to Anil Jacob for the report.

   Fulfil feature request 2914703 - Multipart form data support. Thanks
   to Hitoshi Amano for the request and the implementation.

   Fix bug 2919190 - setTimeout method does not effect read timeouts.
   Thanks to Hitoshi Amano for the report and the fix.

   Fulfil feature request 2923975 - added valuesFromHiddenInput() and
   valuesFromBodyURI() methods to HTTPUtilities. Thanks to Anil Jacob
   for the request.

   Fulfil feature request 2841789 - added valueFromBodyInput() and
   valuesFromBodyInput() methods to HTTPUtilities. Thanks to Satheesh
   Babu Vattekkat for the request.

   Fix bug 2816501 - Test numbers larger than 6 digits get truncated
   in out file. Thanks to Vivin Paliath for the report.

   Fix bug 2501418 - Handle socket lingering properly. Thanks to Dawid
   Weiss for the report and suggested fixes.

   Fix bug 2837600 - Content-type header written instead of Content-Type.
   Thanks to Guido Serra for the report.

   Implement feature request 887214 - the console now optionally includes
   the totals line in saved results. Thanks to Karol Muszynski for
   prompting me to implement this.
