@@ -1,0 +1,44 @@
+// Copyright (C) 2010 Philip Aston
+// All rights reserved.
+//
+// This file is part of The Grinder software distribution. Refer to
+// the file LICENSE which is part of The Grinder distribution for
+// licensing details. The Grinder distribution is available on the
+// Internet at http://grinder.sourceforge.net/
+//
+// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
+// FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
+// COPYRIGHT HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
+// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+// (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+// SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+// HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
+// STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+// ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
+// OF THE POSSIBILITY OF SUCH DAMAGE.
+
+package net.grinder.engine.process.jython;
+
+import static net.grinder.engine.process.instrumenter.AbstractJythonInstrumenterTestCase.assertVersion;
+import static net.grinder.testutility.JythonVersionUtilities.jython25Suite;
+import junit.framework.TestSuite;
+
+
+/**
+ * Miscellaneous unit tests for Jython instrumentation.
+ *
+ * @author Philip Aston
+ * @version $Revision:$
+ */
+public class TestJythonScriptEngineWithJython25 extends TestJythonScriptEngine {
+
+  public static TestSuite suite() throws Exception {
+    return jython25Suite(TestJythonScriptEngineWithJython25.class);
+  }
+
+  public void testVersion() throws Exception {
+    assertVersion("2.5");
+  }
+}
