@@ -1,6 +1,9 @@
 The Grinder 3.5 (Not yet released)
 ----------------------------------
 
+   Fix bug 3008924 - Jython 2.5, assertion error if script has __del__
+   method. Thank to Thomas Falkenberg for the report.
+
    Fix bug 2988755 - NPE in JythonScriptExecutionException
    .tracebackToMessage(). Thanks to Brian Runck for the report.
 
